commit cambio idea

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
     <div class="container">
         <div class="titolo">
-            <p class="titolo-immobile">W</p>
-            <p class="i1">I</p>
-            <p class="titolo-immobile">K</p>
-            <p class="i2">I</p>
-            <p class="titolo-immobile">C</p>
+            <p class="mat">MATURITA</p>&nbsp;<p class="facile">facile</p>
         </div>
+    </div>
+
+
+    <div class="sito">
+       
     </div>
 
 
