--- a/index.html
+++ b/index.html
@@ -2,38 +2,38 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<title>Document</title>
 </head>
 
 <body>
 	<div class="blob-container">
-        <div class="blob color-cyan"></div>
-        <div class="blob color-magenta"></div>
-        <div class="blob color-orange"></div>
+		<div class="blob color-cyan"></div>
+		<div class="blob color-magenta"></div>
+		<div class="blob color-orange"></div>
+	</div>
+	<div class="container" style="height: 4000px;">
+		<div class="titoloeicona">
+		<div class="titolo">
+			<p class="mat">MATURITA</p>&nbsp;<p class="facile">facile</p>
+			<div class="icona">
+			<svg id="icona-libro-svg" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+				viewBox="0 0 520 480">
+				<g transform="scale(0.7)">
+					<path xmlns="http://www.w3.org/2000/svg"
+						d="M 131.75,51.07911 a 13.50135,13.50135 0 0 0 -13.5,13.5 v 13.5 h -27 c -14.751855,0 -27,12.248145 -27,27 v 297 c 0,14.751855 12.248145,27 27,27 h 162 162 c 14.751855,0 27,-12.248145 27,-27 v -297 c 0,-14.751855 -12.248145,-27 -27,-27 h -27 v -13.5 a 13.50135,13.50135 0 0 0 -13.5,-13.5 h -67.5 c -22.05657,0 -41.662065,10.7700165 -54,27.263695 C 197.68011,71.47161 176.099205,60.01461 153,51.07911 Z m 13.5,27 h 54 c 22.52745,0 40.5,17.97255 40.5,40.5 v 244.476495 c -11.41317,-8.82927 -25.042365,-14.976195 -40.5,-14.976195 h -54 v -267 Z m 162,0 h 54 v 13.5 256.5 h -54 c -15.457635,0 -29.135835,6.147225 -40.5,14.976195 v -244.476495 c 0,-22.52745 17.97255,-40.5 40.5,-40.5 Z m -216,27 h 27 v 256.5 a 13.50135,13.50135 0 0 0 13.5,13.5 h 67.5 c 17.77491,0 32.640435,11.21328 38.17962,27 H 91.25 Z m 297,0 h 27 v 297 H 359.60007 c 5.51217,-15.78717 20.40222,-27 38.179605,-27 h 67.5 a 13.50135,13.50135 0 0 0 13.5,-13.5 z"
+						id="path-libro">
+					</path>
+				</g>
+			</svg>
 		</div>
-    <div class="container">
-        <div class="titolo">
-            <p class="mat">MATURITA</p>&nbsp;<p class="facile">facile</p>
-        </div>
-        <div class="icona" style="width: 150px; height: 150px; margin-bottom: 10px;">
-            <svg id="icona-libro-svg" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 520 480">
-                <g transform="scale(0.7)">
-                    <path xmlns="http://www.w3.org/2000/svg"
-                        d="M 131.75,51.07911 a 13.50135,13.50135 0 0 0 -13.5,13.5 v 13.5 h -27 c -14.751855,0 -27,12.248145 -27,27 v 297 c 0,14.751855 12.248145,27 27,27 h 162 162 c 14.751855,0 27,-12.248145 27,-27 v -297 c 0,-14.751855 -12.248145,-27 -27,-27 h -27 v -13.5 a 13.50135,13.50135 0 0 0 -13.5,-13.5 h -67.5 c -22.05657,0 -41.662065,10.7700165 -54,27.263695 C 197.68011,71.47161 176.099205,60.01461 153,51.07911 Z m 13.5,27 h 54 c 22.52745,0 40.5,17.97255 40.5,40.5 v 244.476495 c -11.41317,-8.82927 -25.042365,-14.976195 -40.5,-14.976195 h -54 v -267 Z m 162,0 h 54 v 13.5 256.5 h -54 c -15.457635,0 -29.135835,6.147225 -40.5,14.976195 v -244.476495 c 0,-22.52745 17.97255,-40.5 40.5,-40.5 Z m -216,27 h 27 v 256.5 a 13.50135,13.50135 0 0 0 13.5,13.5 h 67.5 c 17.77491,0 32.640435,11.21328 38.17962,27 H 91.25 Z m 297,0 h 27 v 297 H 359.60007 c 5.51217,-15.78717 20.40222,-27 38.179605,-27 h 67.5 a 13.50135,13.50135 0 0 0 13.5,-13.5 z"
-						 id="path-libro">
-                    </path>
-                </g>
-            </svg>
-        </div>
-        <div class="icona-cervello" style="width: 150px; height: 150px;">
-            <svg id="icona-cervello-svg" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 520 480">
-                <g >
-                    <path
-                        d="M512,316.391c0-13.751-3.925-26.693-10.699-37.604c-4.458-7.17-10.148-13.466-16.775-18.632
+		<div class="icona-cervello" style="opacity: 0;">
+			<svg id="icona-cervello-svg" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+				viewBox="0 0 520 480">
+				<g>
+					<path d="M512,316.391c0-13.751-3.925-26.693-10.699-37.604c-4.458-7.17-10.148-13.466-16.775-18.632
 		c6.379-8.971,10.709-19.616,12.152-31.262c0.359-2.849,0.524-5.69,0.524-8.502c0-17.079-6.37-33.017-17.042-45.178v0.01
 		c-7.721-8.824-17.796-15.7-29.341-19.644c2.436-7.409,3.732-15.13,3.742-22.915v-0.046v-0.01
 		c-0.01-8.199-1.434-16.435-4.375-24.294c-2.933-7.869-7.381-15.36-13.338-22.015c-7.022-7.868-15.461-13.852-24.57-17.841
@@ -316,25 +316,32 @@
 		c0.027,0.074,0.046,0.156,0.074,0.23c0.34,0.947,0.652,1.894,0.928,2.868c0.009,0.056,0.019,0.11,0.037,0.166
 		c0.276,0.984,0.524,1.977,0.744,2.978c0.019,0.12,0.037,0.23,0.056,0.349c0.193,0.938,0.367,1.894,0.496,2.849
 		c0.046,0.341,0.074,0.68,0.11,1.03c0.092,0.735,0.184,1.471,0.23,2.216c0.083,1.094,0.12,2.206,0.12,3.318
-		C487.688,317.199,487.67,318,487.633,318.781z"
-        id="path-cervello" />
-                </g>
-            </svg>
-        </div>
-        <div class="sito">
-		<svg id="tracciato" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 520 480">
-                <g >
-                    <path xmlns="http://www.w3.org/2000/svg"
-                        d="M 10 4 C 12 5 12 6 9 7 C 6 8 6 9 7 11" id="tracciato">
-                    </path>
-                </g>
-            </svg>	
-        </div>
+		C487.688,317.199,487.67,318,487.633,318.781z" id="path-cervello" />
+				</g>
+			</svg>
+		</div>
+		
+		</div>
+		
+	</div>
+	</div>
 
-        <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/MorphSVGPlugin.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-        <script src="script.js"></script>
+		
+			<svg id="freccia"  width="500" height="950" viewBox="0 0 500 750" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path id="curvedPath" d=
+			"M 250 50
+           C 150 100, 150 200, 250 250
+           C 350 300, 350 400, 80 450
+		   L 70 500" 
+		   stroke="black" fill="none" stroke-width="2" />
+			</svg>
+		
+
+		<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/MotionPathPlugin.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/MorphSVGPlugin.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+		<script src="script.js"></script>
 </body>
 
 </html>
