--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="titolo">
 			<p class="mat">MATURITA</p>&nbsp;<p class="facile">facile</p>
 			<div class="icona">
-			<svg id="icona-libro-svg" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+			<svg id="icona-libro-svg" width="55%" height="55%" xmlns="http://www.w3.org/2000/svg"
 				viewBox="0 0 520 480">
 				<g transform="scale(0.7)">
 					<path xmlns="http://www.w3.org/2000/svg"
@@ -30,7 +30,7 @@
 			</svg>
 		</div>
 		<div class="icona-cervello" style="opacity: 0;">
-			<svg id="icona-cervello-svg" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+			<svg id="icona-cervello-svg" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg"
 				viewBox="0 0 520 480">
 				<g>
 					<path d="M512,316.391c0-13.751-3.925-26.693-10.699-37.604c-4.458-7.17-10.148-13.466-16.775-18.632
@@ -324,19 +324,14 @@
 		</div>
 		
 	</div>
+	<div class="attivatore1"></div>
 	</div>
+	<div class="animazione" ></div>
 
 		
-			<svg id="freccia"  width="500" height="950" viewBox="0 0 500 750" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path id="curvedPath" d=
-			"M 250 50
-           C 150 100, 150 200, 250 250
-           C 350 300, 350 400, 80 450
-		   L 70 500" 
-		   stroke="black" fill="none" stroke-width="2" />
-			</svg>
+			
 		
-
+		<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/MotionPathPlugin.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/MorphSVGPlugin.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
