pagina iniziale finita, manca solo cambiare gli svg in bottoni o mettre on click

--- a/index.html
+++ b/index.html
@@ -13,27 +13,28 @@
 		<div class="blob color-cyan"></div>
 		<div class="blob color-magenta"></div>
 		<div class="blob color-orange"></div>
+		<div class="blob color-green"></div>
 	</div>
-	<div class="container" style="height: 4000px;">
+	<div class="container" style="height: 2800px;">
 		<div class="titoloeicona">
-		<div class="titolo">
-			<p class="mat">MATURITA</p>&nbsp;<p class="facile">facile</p>
-			<div class="icona">
-			<svg id="icona-libro-svg" width="55%" height="55%" xmlns="http://www.w3.org/2000/svg"
-				viewBox="0 0 520 480">
-				<g transform="scale(0.7)">
-					<path xmlns="http://www.w3.org/2000/svg"
-						d="M 131.75,51.07911 a 13.50135,13.50135 0 0 0 -13.5,13.5 v 13.5 h -27 c -14.751855,0 -27,12.248145 -27,27 v 297 c 0,14.751855 12.248145,27 27,27 h 162 162 c 14.751855,0 27,-12.248145 27,-27 v -297 c 0,-14.751855 -12.248145,-27 -27,-27 h -27 v -13.5 a 13.50135,13.50135 0 0 0 -13.5,-13.5 h -67.5 c -22.05657,0 -41.662065,10.7700165 -54,27.263695 C 197.68011,71.47161 176.099205,60.01461 153,51.07911 Z m 13.5,27 h 54 c 22.52745,0 40.5,17.97255 40.5,40.5 v 244.476495 c -11.41317,-8.82927 -25.042365,-14.976195 -40.5,-14.976195 h -54 v -267 Z m 162,0 h 54 v 13.5 256.5 h -54 c -15.457635,0 -29.135835,6.147225 -40.5,14.976195 v -244.476495 c 0,-22.52745 17.97255,-40.5 40.5,-40.5 Z m -216,27 h 27 v 256.5 a 13.50135,13.50135 0 0 0 13.5,13.5 h 67.5 c 17.77491,0 32.640435,11.21328 38.17962,27 H 91.25 Z m 297,0 h 27 v 297 H 359.60007 c 5.51217,-15.78717 20.40222,-27 38.179605,-27 h 67.5 a 13.50135,13.50135 0 0 0 13.5,-13.5 z"
-						id="path-libro">
-					</path>
-				</g>
-			</svg>
-		</div>
-		<div class="icona-cervello" style="opacity: 0;">
-			<svg id="icona-cervello-svg" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg"
-				viewBox="0 0 520 480">
-				<g>
-					<path d="M512,316.391c0-13.751-3.925-26.693-10.699-37.604c-4.458-7.17-10.148-13.466-16.775-18.632
+			<div class="titolo">
+				<p class="mat">MATURITA</p>&nbsp;<p class="facile">facile</p>
+				<div class="icona">
+					<svg id="icona-libro-svg" width="55%" height="55%" xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 520 480">
+						<g transform="scale(0.7)">
+							<path xmlns="http://www.w3.org/2000/svg"
+								d="M 131.75,51.07911 a 13.50135,13.50135 0 0 0 -13.5,13.5 v 13.5 h -27 c -14.751855,0 -27,12.248145 -27,27 v 297 c 0,14.751855 12.248145,27 27,27 h 162 162 c 14.751855,0 27,-12.248145 27,-27 v -297 c 0,-14.751855 -12.248145,-27 -27,-27 h -27 v -13.5 a 13.50135,13.50135 0 0 0 -13.5,-13.5 h -67.5 c -22.05657,0 -41.662065,10.7700165 -54,27.263695 C 197.68011,71.47161 176.099205,60.01461 153,51.07911 Z m 13.5,27 h 54 c 22.52745,0 40.5,17.97255 40.5,40.5 v 244.476495 c -11.41317,-8.82927 -25.042365,-14.976195 -40.5,-14.976195 h -54 v -267 Z m 162,0 h 54 v 13.5 256.5 h -54 c -15.457635,0 -29.135835,6.147225 -40.5,14.976195 v -244.476495 c 0,-22.52745 17.97255,-40.5 40.5,-40.5 Z m -216,27 h 27 v 256.5 a 13.50135,13.50135 0 0 0 13.5,13.5 h 67.5 c 17.77491,0 32.640435,11.21328 38.17962,27 H 91.25 Z m 297,0 h 27 v 297 H 359.60007 c 5.51217,-15.78717 20.40222,-27 38.179605,-27 h 67.5 a 13.50135,13.50135 0 0 0 13.5,-13.5 z"
+								id="path-libro">
+							</path>
+						</g>
+					</svg>
+				</div>
+				<div class="icona-cervello" style="opacity: 0;">
+					<svg id="icona-cervello-svg" width="80%" height="80%" xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 520 480">
+						<g>
+							<path d="M512,316.391c0-13.751-3.925-26.693-10.699-37.604c-4.458-7.17-10.148-13.466-16.775-18.632
 		c6.379-8.971,10.709-19.616,12.152-31.262c0.359-2.849,0.524-5.69,0.524-8.502c0-17.079-6.37-33.017-17.042-45.178v0.01
 		c-7.721-8.824-17.796-15.7-29.341-19.644c2.436-7.409,3.732-15.13,3.742-22.915v-0.046v-0.01
 		c-0.01-8.199-1.434-16.435-4.375-24.294c-2.933-7.869-7.381-15.36-13.338-22.015c-7.022-7.868-15.461-13.852-24.57-17.841
@@ -317,26 +318,53 @@
 		c0.276,0.984,0.524,1.977,0.744,2.978c0.019,0.12,0.037,0.23,0.056,0.349c0.193,0.938,0.367,1.894,0.496,2.849
 		c0.046,0.341,0.074,0.68,0.11,1.03c0.092,0.735,0.184,1.471,0.23,2.216c0.083,1.094,0.12,2.206,0.12,3.318
 		C487.688,317.199,487.67,318,487.633,318.781z" id="path-cervello" />
-				</g>
-			</svg>
-		</div>
-		
-		</div>
-		
-	</div>
-	<div class="attivatore1"></div>
-	</div>
-	<div class="animazione" ></div>
+						</g>
+					</svg>
+				</div>
 
-		
-			
-		
-		<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/MotionPathPlugin.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/MorphSVGPlugin.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-		<script src="script.js"></script>
+			</div>
+
+		</div>
+		<div class="attivatore1"></div>
+		<div class="opzioni">
+			<div class="nuovo">
+
+				<svg width="800px" height="800px" viewBox="0 0 24 24" id="file-new" data-name="multi color"
+					xmlns="http://www.w3.org/2000/svg" class="icon multi-color">
+					<path id="tertiary-fill" d="M4,3H7A0,0,0,0,1,7,3V20a0,0,0,0,1,0,0H4a1,1,0,0,1-1-1V4A1,1,0,0,1,4,3Z"
+						style="fill: #b7b7b7; stroke-width: 2;"></path>
+					<path id="primary-stroke"
+						d="M10,20H4a1,1,0,0,1-1-1V4A1,1,0,0,1,4,3h9.59a1,1,0,0,1,.7.29l3.42,3.42a1,1,0,0,1,.29.7V11"
+						style="fill: none; stroke: rgb(236, 236, 236); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;">
+					</path>
+					<path id="secondary-stroke" d="M18,15v6m3-3H15"
+						style="fill: none; stroke: rgb(44, 169, 188); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;">
+					</path>
+				</svg>
+				<p>Crea un riassunto completo del tuo programma</p>
+			</div>
+			<div class="continua">
+				<svg width="800px" height="800px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M12 8V12L14.5 14.5" stroke="#17807a" stroke-width="1.5" stroke-linecap="round"
+						stroke-linejoin="round" />
+					<path
+						d="M5.60423 5.60423L5.0739 5.0739V5.0739L5.60423 5.60423ZM4.33785 6.87061L3.58786 6.87438C3.58992 7.28564 3.92281 7.61853 4.33408 7.6206L4.33785 6.87061ZM6.87963 7.63339C7.29384 7.63547 7.63131 7.30138 7.63339 6.88717C7.63547 6.47296 7.30138 6.13549 6.88717 6.13341L6.87963 7.63339ZM5.07505 4.32129C5.07296 3.90708 4.7355 3.57298 4.32129 3.57506C3.90708 3.57715 3.57298 3.91462 3.57507 4.32882L5.07505 4.32129ZM3.75 12C3.75 11.5858 3.41421 11.25 3 11.25C2.58579 11.25 2.25 11.5858 2.25 12H3.75ZM16.8755 20.4452C17.2341 20.2378 17.3566 19.779 17.1492 19.4204C16.9418 19.0619 16.483 18.9393 16.1245 19.1468L16.8755 20.4452ZM19.1468 16.1245C18.9393 16.483 19.0619 16.9418 19.4204 17.1492C19.779 17.3566 20.2378 17.2341 20.4452 16.8755L19.1468 16.1245ZM5.14033 5.07126C4.84598 5.36269 4.84361 5.83756 5.13505 6.13191C5.42648 6.42626 5.90134 6.42862 6.19569 6.13719L5.14033 5.07126ZM18.8623 5.13786C15.0421 1.31766 8.86882 1.27898 5.0739 5.0739L6.13456 6.13456C9.33366 2.93545 14.5572 2.95404 17.8017 6.19852L18.8623 5.13786ZM5.0739 5.0739L3.80752 6.34028L4.86818 7.40094L6.13456 6.13456L5.0739 5.0739ZM4.33408 7.6206L6.87963 7.63339L6.88717 6.13341L4.34162 6.12062L4.33408 7.6206ZM5.08784 6.86684L5.07505 4.32129L3.57507 4.32882L3.58786 6.87438L5.08784 6.86684ZM12 3.75C16.5563 3.75 20.25 7.44365 20.25 12H21.75C21.75 6.61522 17.3848 2.25 12 2.25V3.75ZM12 20.25C7.44365 20.25 3.75 16.5563 3.75 12H2.25C2.25 17.3848 6.61522 21.75 12 21.75V20.25ZM16.1245 19.1468C14.9118 19.8483 13.5039 20.25 12 20.25V21.75C13.7747 21.75 15.4407 21.2752 16.8755 20.4452L16.1245 19.1468ZM20.25 12C20.25 13.5039 19.8483 14.9118 19.1468 16.1245L20.4452 16.8755C21.2752 15.4407 21.75 13.7747 21.75 12H20.25ZM6.19569 6.13719C7.68707 4.66059 9.73646 3.75 12 3.75V2.25C9.32542 2.25 6.90113 3.32791 5.14033 5.07126L6.19569 6.13719Z"
+						fill="white" />
+				</svg>
+				<p>Visualizza tutti i tuoi riassunti con un click</p>
+			</div>
+		</div>
+	</div>
+
+
+
+
+	<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/MotionPathPlugin.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/MorphSVGPlugin.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+	<script src="script.js"></script>
 </body>
 
 </html>
