--- a/nuovo/nuovo.html
+++ b/nuovo/nuovo.html
@@ -72,18 +72,36 @@
                                 riassunto approfondito e ben
                                 strutturato del programma scolastico del docente, partendo direttamente dal file PDF che
                                 carichi.
-                                A differenza dei riassunti generati da altre intelligenze artificiali – spesso troppo
-                                generici o brevi per essere davvero utili – qui il riassunto viene elaborato in modo più
-                                completo, mantenendo la struttura, i contenuti chiave e i dettagli specifici presenti
-                                nel programma originale.
+                                A differenza dei riassunti generati da altre intelligenze artificiali, qui il riassunto viene elaborato in modo più
+                                completo.
 
-                                L’obiettivo è offrirti un testo più chiaro, utilizzabile per la preparazione alla
-                                maturità interamente da ciò che il mio mio sito produce
+                               <p style="text-align: center;">L’obiettivo è offrirti un testo più chiaro, utilizzabile per la preparazione alla
+                                maturità interamente da ciò che il mio mio sito produce  </p>
                             </p>
                         </div>
-
-                        <div class="alert alert-primary" role="alert" style="margin-top: 5vh;">
-                            Per procedere inserire il file NECESSARIAMENTE in formato PDF, e cliccare sulla freccia in basso a destra
+                        <svg style="margin-top: 3vh;" height="6vh" viewBox="-1 -1 30 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink"
+                            xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" fill="#ffffff">
+                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                            <g id="SVGRepo_iconCarrier">
+                                <title>alert</title>
+                                <desc>Created with Sketch Beta.</desc>
+                                <defs> </defs>
+                                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"
+                                    sketch:type="MSPage">
+                                    <g id="Icon-Set" sketch:type="MSLayerGroup"
+                                        transform="translate(-362.000000, -880.000000)" fill="#ffffff">
+                                        <path
+                                            d="M365,904 L368,898 L368,890 C368,885.582 371.582,882 376,882 C380.418,882 384,885.582 384,890 L384,898 L387,904 L365,904 L365,904 Z M376,908 C374.695,908 373.597,907.163 373.184,906 L378.816,906 C378.403,907.163 377.305,908 376,908 L376,908 Z M386,898 L386,890 C386,884.478 381.522,880 376,880 C370.478,880 366,884.478 366,890 L366,898 L362,906 L371.101,906 C371.564,908.282 373.581,910 376,910 C378.419,910 380.436,908.282 380.899,906 L390,906 L386,898 L386,898 Z"
+                                            id="alert" sketch:type="MSShapeGroup"> </path>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
+                        <div class="alert alert-primary" role="alert" >
+                            Per procedere inserire il file NECESSARIAMENTE in formato PDF, e cliccare sulla freccia in
+                            basso a destra
                         </div>
                     </div>
                 </div>
