--- a/nuovo/nuovo.html
+++ b/nuovo/nuovo.html
@@ -12,12 +12,12 @@
 
 <body>
     <div class="carica">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-12 icona">
                     <div class="titolo-carica">
-                        <h1 style="font-size: 3vw;">Carica il tuo file</h1>
-                        <svg width="10vw" height="10vh" viewBox="2 3 40 27" fill="none"
+                        <h1 style="font-size: 4vw; margin-right: 2%;">1. Carica </h1>
+                        <svg width="10vw" height="10vh" viewBox="2 3 40 23" fill="none"
                             xmlns="http://www.w3.org/2000/svg" stroke="#ffffff" stroke-width="0.00024000000000000003">
                             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"
@@ -48,68 +48,112 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-4">
 
                     <div class="descrizione-carica">
                         <div class="descizione-sito" style="display: flex; justify-content:  center; flex-wrap: wrap;">
-                            <svg width="6vw" height="6vh" viewBox="0 0 24 24" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                                <g id="SVGRepo_iconCarrier">
-                                    <path
-                                        d="M12 7C12.5523 7 13 7.44772 13 8V13C13 13.5523 12.5523 14 12 14C11.4477 14 11 13.5523 11 13V8C11 7.44772 11.4477 7 12 7Z"
-                                        fill="#ffffff"></path>
-                                    <path
-                                        d="M12 17C12.5523 17 13 16.5523 13 16C13 15.4477 12.5523 15 12 15C11.4477 15 11 15.4477 11 16C11 16.5523 11.4477 17 12 17Z"
-                                        fill="#ffffff"></path>
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2ZM4 12C4 7.58172 7.58172 4 12 4C16.4183 4 20 7.58172 20 12C20 16.4183 16.4183 20 12 20C7.58172 20 4 16.4183 4 12Z"
-                                        fill="#ffffff"></path>
-                                </g>
-                            </svg>
-                            <p style="text-align: center;">Questo sito è stato progettato per aiutarti a creare un
-                                riassunto approfondito e ben
-                                strutturato del programma scolastico del docente, partendo direttamente dal file PDF che
-                                carichi.
-                                A differenza dei riassunti generati da altre intelligenze artificiali, qui il riassunto viene elaborato in modo più
-                                completo.
 
-                               <p style="text-align: center;">L’obiettivo è offrirti un testo più chiaro, utilizzabile per la preparazione alla
-                                maturità interamente da ciò che il mio mio sito produce  </p>
-                            </p>
-                        </div>
-                        <svg style="margin-top: 3vh;" height="6vh" viewBox="-1 -1 30 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink"
-                            xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" fill="#ffffff">
-                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                            <g id="SVGRepo_iconCarrier">
-                                <title>alert</title>
-                                <desc>Created with Sketch Beta.</desc>
-                                <defs> </defs>
-                                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"
-                                    sketch:type="MSPage">
-                                    <g id="Icon-Set" sketch:type="MSLayerGroup"
-                                        transform="translate(-362.000000, -880.000000)" fill="#ffffff">
+                            <p style="text-align: center; font-size: 33px; color: #bcbcbc;">Carica in questa sezione il
+                                file del tuo programma scolastico</p>
+
+                            <p style="text-align: center; font-size: 25px; margin-left: -20%; margin-top: 20%; color: #ababab;">
+
+
+                                <svg width="6vw" height="6vh" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                    <g id="SVGRepo_iconCarrier">
                                         <path
-                                            d="M365,904 L368,898 L368,890 C368,885.582 371.582,882 376,882 C380.418,882 384,885.582 384,890 L384,898 L387,904 L365,904 L365,904 Z M376,908 C374.695,908 373.597,907.163 373.184,906 L378.816,906 C378.403,907.163 377.305,908 376,908 L376,908 Z M386,898 L386,890 C386,884.478 381.522,880 376,880 C370.478,880 366,884.478 366,890 L366,898 L362,906 L371.101,906 C371.564,908.282 373.581,910 376,910 C378.419,910 380.436,908.282 380.899,906 L390,906 L386,898 L386,898 Z"
-                                            id="alert" sketch:type="MSShapeGroup"> </path>
+                                            d="M12 7C12.5523 7 13 7.44772 13 8V13C13 13.5523 12.5523 14 12 14C11.4477 14 11 13.5523 11 13V8C11 7.44772 11.4477 7 12 7Z"
+                                            fill="#ffffff"></path>
+                                        <path
+                                            d="M12 17C12.5523 17 13 16.5523 13 16C13 15.4477 12.5523 15 12 15C11.4477 15 11 15.4477 11 16C11 16.5523 11.4477 17 12 17Z"
+                                            fill="#ffffff"></path>
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2ZM4 12C4 7.58172 7.58172 4 12 4C16.4183 4 20 7.58172 20 12C20 16.4183 16.4183 20 12 20C7.58172 20 4 16.4183 4 12Z"
+                                            fill="#ffffff"></path>
                                     </g>
-                                </g>
-                            </g>
-                        </svg>
-                        <div class="alert alert-primary" role="alert" >
-                            Per procedere inserire il file NECESSARIAMENTE in formato PDF, e cliccare sulla freccia in
-                            basso a destra
+                                </svg>
+                                scopri
+                            </p>
+
+                        </div>
+
+                        <div class="alert alert-warning" role="alert" style="height: fit-content; margin-top: 25%;">
+                            <div class="container-fluid">
+                                <div class="row">
+                            <div class="col text-center ">
+                            <p style="font-size: 26px;">Il file Deve essere in formato PDF</p>
+                            </div>
+                            </div>
+                        </div>
                         </div>
                     </div>
                 </div>
-                <div class="col"></div>
+                <div class="col-8">
+                    <div class="carica-file" id="carica-file">
+                        <div class="icona-clicca">
+                            <svg width="15vw" height="15vh" viewBox="0 0 24 24" id="Layer_1" data-name="Layer 1"
+                                xmlns="http://www.w3.org/2000/svg" fill="#ffffff">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke="#CCCCCC" stroke-width="1.152">
+                                    <defs>
+                                        <style>
+                                            .cls-1 {
+                                                fill: none;
+                                                stroke: #ffffff;
+                                                stroke-miterlimit: 10;
+                                                stroke-width: 1.91px;
+                                            }
+                                        </style>
+                                    </defs>
+                                    <path class="cls-1"
+                                        d="M17.07,20.61H9.79a2,2,0,0,1-2-2,2,2,0,0,1,2-2h1.87L5,9.86a2,2,0,0,1-.19-2.65,1.88,1.88,0,0,1,1.47-.68,1.84,1.84,0,0,1,1.35.55l4.06,4.06,4.08-3.06a1.91,1.91,0,0,1,2.5.18h0A17.18,17.18,0,0,1,22.42,15l.06.19">
+                                    </path>
+                                    <path class="cls-1"
+                                        d="M10.63,10.12A4.73,4.73,0,0,0,11,8.17,4.78,4.78,0,1,0,6.26,13a4.67,4.67,0,0,0,1.55-.26">
+                                    </path>
+                                </g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <defs>
+                                        <style>
+                                            .cls-1 {
+                                                fill: none;
+                                                stroke: #ffffff;
+                                                stroke-miterlimit: 10;
+                                                stroke-width: 1.91px;
+                                            }
+                                        </style>
+                                    </defs>
+                                    <path class="cls-1"
+                                        d="M17.07,20.61H9.79a2,2,0,0,1-2-2,2,2,0,0,1,2-2h1.87L5,9.86a2,2,0,0,1-.19-2.65,1.88,1.88,0,0,1,1.47-.68,1.84,1.84,0,0,1,1.35.55l4.06,4.06,4.08-3.06a1.91,1.91,0,0,1,2.5.18h0A17.18,17.18,0,0,1,22.42,15l.06.19">
+                                    </path>
+                                    <path class="cls-1"
+                                        d="M10.63,10.12A4.73,4.73,0,0,0,11,8.17,4.78,4.78,0,1,0,6.26,13a4.67,4.67,0,0,0,1.55-.26">
+                                    </path>
+                                </g>
+                            </svg>
+                        </div>
+                    </div>
+
+                    
+                </div>
             </div>
         </div>
     </div>
-    <div class="impostazioni">
+    <div class="opzioni">
+        <div class="row">
+            <div class="col-4">
+                <div class="descizione-opzioni">
+                    <p>Selezione qui tutte le tue preferenze </p>
+                </div>
+            </div>
+            <div class="col-8">
+
+            </div>
+        </div>
 
     </div>
     <div class="attendi">
