e ci siamo, molto bene, inizio pagina definizione opzioni

--- a/nuovo/nuovo.html
+++ b/nuovo/nuovo.html
@@ -83,7 +83,7 @@
                         <div class="alert alert-warning" role="alert" style="height: fit-content; margin-top: 25%;">
                             <div class="container-fluid">
                                 <div class="row">
-                            <div class="col text-center ">
+                            <div class="col text-center " ">
                             <p style="font-size: 26px;">Il file Deve essere in formato PDF</p>
                             </div>
                             </div>
@@ -144,17 +144,67 @@
         </div>
     </div>
     <div class="opzioni">
-        <div class="row">
-            <div class="col-4">
-                <div class="descizione-opzioni">
-                    <p>Selezione qui tutte le tue preferenze </p>
+        <div class="container-fluid">
+            <div class="row text-center">
+                <div class="titolo-opzioni">Scegli le tue preferenze</div>
+
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <div class="descrizione-opzioni">
+                        <p style="font-size: 30px; text-align: center;">
+                            Ora è il momento di scegliere le tue preferenze
+                        </p>
+                        <div style="display: flex; margin-left: -7%;">
+                            <div style="margin-top: 6%;">
+                            <svg  width="100px" height="100px" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg" stroke="#ffffff" data-dm-inline-stroke=""
+                                style="--dm-inline-stroke: #f2f0ed;">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <path d="M12 8L12 13" stroke="#ffffff" stroke-width="2" stroke-linecap="round"
+                                        data-dm-inline-stroke="" style="--dm-inline-stroke: #f2f0ed;"></path>
+                                    <path d="M12 16V15.9888" stroke="#ffffff" stroke-width="2" stroke-linecap="round"
+                                        data-dm-inline-stroke="" style="--dm-inline-stroke: #f2f0ed;"></path>
+                                </g>
+                            </svg>
+                            </div>
+                            <p
+                                style="font-size: 20px; text-align: center; color: rgba(255, 255, 255, 0.658); padding: 8%;">
+                                Influiranno pesantemente su come il tuo riassunto apparirà e su cosa conterrà.</p>
+                        </div>
+
+                        <div class="alert alert-primary" role="alert" style="height: fit-content; margin-top:15%;">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col text-center ">
+                                        <p style="font-size: 26px;">Mi raccomando, scegli con cura</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-8">
+                    <div class="def-opzioni">
+                        <div class="row">
+                            <div class="col">
+
+                            </div>
+                            <div class="col">
+
+                            </div>
+
+                        </div>
+                        <div class="row">
+
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="col-8">
 
-            </div>
         </div>
-
     </div>
     <div class="attendi">
 
