--- a/nuovo/nuovo.html
+++ b/nuovo/nuovo.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col-12 icona">
                     <div class="titolo-carica">
-                        <h1 style="font-size: 4vw; margin-right: 2%;">1. Carica </h1>
+                        <h1 style="font-size: 4vw; margin-right: 2%;">1. Fornisci il Contenuto</h1>
                         <svg width="10vw" height="10vh" viewBox="2 3 40 23" fill="none"
                             xmlns="http://www.w3.org/2000/svg" stroke="#ffffff" stroke-width="0.00024000000000000003">
                             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -49,16 +49,12 @@
             </div>
             <div class="row">
                 <div class="col-4">
-
                     <div class="descrizione-carica">
-                        <div class="descizione-sito" style="display: flex; justify-content:  center; flex-wrap: wrap;">
-
-                            <p style="text-align: center; font-size: 33px; color: #bcbcbc;">Carica in questa sezione il
-                                file del tuo programma scolastico</p>
-
-                            <p style="text-align: center; font-size: 25px; margin-left: -20%; margin-top: 20%; color: #ababab;">
-
-
+                        <div class="descizione-sito" style="display: flex; justify-content: center; flex-wrap: wrap;">
+                            <p style="text-align: center; font-size: 33px; color: #bcbcbc;">
+                                Carica un file PDF o incolla il testo del tuo programma scolastico.
+                            </p>
+                            <p style="text-align: center; font-size: 25px; margin-left: -20%; margin-top: 10%; color: #ababab;">
                                 <svg width="6vw" height="6vh" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -77,68 +73,74 @@
                                 </svg>
                                 scopri
                             </p>
-
                         </div>
-
-                        <div class="alert alert-warning" role="alert" style="height: fit-content; margin-top: 25%;">
+                        <div class="alert alert-info" role="alert" style="height: fit-content; margin-top: 15%;">
                             <div class="container-fluid">
                                 <div class="row">
-                            <div class="col text-center " ">
-                            <p style="font-size: 26px;">Il file Deve essere in formato PDF</p>
+                                    <div class="col text-center">
+                                        <p style="font-size: 26px;">Se carichi un file, assicurati sia in formato PDF.</p>
+                                    </div>
+                                </div>
                             </div>
-                            </div>
-                        </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-8">
-                    <div class="carica-file" id="carica-file">
-                        <div class="icona-clicca">
-                            <svg width="15vw" height="15vh" viewBox="0 0 24 24" id="Layer_1" data-name="Layer 1"
-                                xmlns="http://www.w3.org/2000/svg" fill="#ffffff">
-                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"
-                                    stroke="#CCCCCC" stroke-width="1.152">
-                                    <defs>
-                                        <style>
-                                            .cls-1 {
-                                                fill: none;
-                                                stroke: #ffffff;
-                                                stroke-miterlimit: 10;
-                                                stroke-width: 1.91px;
-                                            }
-                                        </style>
-                                    </defs>
-                                    <path class="cls-1"
-                                        d="M17.07,20.61H9.79a2,2,0,0,1-2-2,2,2,0,0,1,2-2h1.87L5,9.86a2,2,0,0,1-.19-2.65,1.88,1.88,0,0,1,1.47-.68,1.84,1.84,0,0,1,1.35.55l4.06,4.06,4.08-3.06a1.91,1.91,0,0,1,2.5.18h0A17.18,17.18,0,0,1,22.42,15l.06.19">
-                                    </path>
-                                    <path class="cls-1"
-                                        d="M10.63,10.12A4.73,4.73,0,0,0,11,8.17,4.78,4.78,0,1,0,6.26,13a4.67,4.67,0,0,0,1.55-.26">
-                                    </path>
-                                </g>
-                                <g id="SVGRepo_iconCarrier">
-                                    <defs>
-                                        <style>
-                                            .cls-1 {
-                                                fill: none;
-                                                stroke: #ffffff;
-                                                stroke-miterlimit: 10;
-                                                stroke-width: 1.91px;
-                                            }
-                                        </style>
-                                    </defs>
-                                    <path class="cls-1"
-                                        d="M17.07,20.61H9.79a2,2,0,0,1-2-2,2,2,0,0,1,2-2h1.87L5,9.86a2,2,0,0,1-.19-2.65,1.88,1.88,0,0,1,1.47-.68,1.84,1.84,0,0,1,1.35.55l4.06,4.06,4.08-3.06a1.91,1.91,0,0,1,2.5.18h0A17.18,17.18,0,0,1,22.42,15l.06.19">
-                                    </path>
-                                    <path class="cls-1"
-                                        d="M10.63,10.12A4.73,4.73,0,0,0,11,8.17,4.78,4.78,0,1,0,6.26,13a4.67,4.67,0,0,0,1.55-.26">
-                                    </path>
-                                </g>
-                            </svg>
+                    <div class="input-container">
+                        <div class="carica-file" id="carica-file-pdf">
+                            <div class="icona-clicca">
+                                <svg width="10vw" height="10vh" viewBox="0 0 24 24" id="Layer_1" data-name="Layer 1"
+                                    xmlns="http://www.w3.org/2000/svg" fill="#ffffff">
+                                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"
+                                        stroke="#CCCCCC" stroke-width="1.152">
+                                        <defs>
+                                            <style>
+                                                .cls-1 {
+                                                    fill: none;
+                                                    stroke: #ffffff;
+                                                    stroke-miterlimit: 10;
+                                                    stroke-width: 1.91px;
+                                                }
+                                            </style>
+                                        </defs>
+                                        <path class="cls-1"
+                                            d="M17.07,20.61H9.79a2,2,0,0,1-2-2,2,2,0,0,1,2-2h1.87L5,9.86a2,2,0,0,1-.19-2.65,1.88,1.88,0,0,1,1.47-.68,1.84,1.84,0,0,1,1.35.55l4.06,4.06,4.08-3.06a1.91,1.91,0,0,1,2.5.18h0A17.18,17.18,0,0,1,22.42,15l.06.19">
+                                        </path>
+                                        <path class="cls-1"
+                                            d="M10.63,10.12A4.73,4.73,0,0,0,11,8.17,4.78,4.78,0,1,0,6.26,13a4.67,4.67,0,0,0,1.55-.26">
+                                        </path>
+                                    </g>
+                                    <g id="SVGRepo_iconCarrier">
+                                        <defs>
+                                            <style>
+                                                .cls-1 {
+                                                    fill: none;
+                                                    stroke: #ffffff;
+                                                    stroke-miterlimit: 10;
+                                                    stroke-width: 1.91px;
+                                                }
+                                            </style>
+                                        </defs>
+                                        <path class="cls-1"
+                                            d="M17.07,20.61H9.79a2,2,0,0,1-2-2,2,2,0,0,1,2-2h1.87L5,9.86a2,2,0,0,1-.19-2.65,1.88,1.88,0,0,1,1.47-.68,1.84,1.84,0,0,1,1.35.55l4.06,4.06,4.08-3.06a1.91,1.91,0,0,1,2.5.18h0A17.18,17.18,0,0,1,22.42,15l.06.19">
+                                        </path>
+                                        <path class="cls-1"
+                                            d="M10.63,10.12A4.73,4.73,0,0,0,11,8.17,4.78,4.78,0,1,0,6.26,13a4.67,4.67,0,0,0,1.55-.26">
+                                        </path>
+                                    </g>
+                                </svg>
+                                <p style="font-size: 1.5vw; margin-top: 10px;">Clicca per caricare PDF</p>
+                            </div>
+                        </div>
+                        <div class="separatore-o">
+                            <span style="font-size: 2vw;">O</span>
+                        </div>
+                        <div class="carica-testo">
+                            <textarea id="text-input" placeholder="Incolla il testo qui..."></textarea>
+                            <button id="use-text-button" class="btn btn-primary mt-3">Usa Questo Testo</button>
                         </div>
                     </div>
-
-                    
                 </div>
             </div>
         </div>
@@ -147,28 +149,27 @@
         <div class="container-fluid">
             <div class="row text-center">
                 <div class="titolo-opzioni">Scegli le tue preferenze</div>
-
             </div>
             <div class="row">
                 <div class="col-4">
                     <div class="descrizione-opzioni">
                         <p style="font-size: 30px; text-align: center;">
-                            Ora è il momento di scegliere le tue preferenze
+                            Ora è il momento di scegliere le tue preferenze.
                         </p>
                         <div style="display: flex; margin-left: -7%;">
                             <div style="margin-top: 6%;">
-                            <svg  width="100px" height="100px" viewBox="0 0 24 24" fill="none"
-                                xmlns="http://www.w3.org/2000/svg" stroke="#ffffff" data-dm-inline-stroke=""
-                                style="--dm-inline-stroke: #f2f0ed;">
-                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                                <g id="SVGRepo_iconCarrier">
-                                    <path d="M12 8L12 13" stroke="#ffffff" stroke-width="2" stroke-linecap="round"
-                                        data-dm-inline-stroke="" style="--dm-inline-stroke: #f2f0ed;"></path>
-                                    <path d="M12 16V15.9888" stroke="#ffffff" stroke-width="2" stroke-linecap="round"
-                                        data-dm-inline-stroke="" style="--dm-inline-stroke: #f2f0ed;"></path>
-                                </g>
-                            </svg>
+                                <svg width="100px" height="100px" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" stroke="#ffffff" data-dm-inline-stroke=""
+                                    style="--dm-inline-stroke: #f2f0ed;">
+                                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                    <g id="SVGRepo_iconCarrier">
+                                        <path d="M12 8L12 13" stroke="#ffffff" stroke-width="2" stroke-linecap="round"
+                                            data-dm-inline-stroke="" style="--dm-inline-stroke: #f2f0ed;"></path>
+                                        <path d="M12 16V15.9888" stroke="#ffffff" stroke-width="2" stroke-linecap="round"
+                                            data-dm-inline-stroke="" style="--dm-inline-stroke: #f2f0ed;"></path>
+                                    </g>
+                                </svg>
                             </div>
                             <p
                                 style="font-size: 20px; text-align: center; color: rgba(255, 255, 255, 0.658); padding: 8%;">
@@ -188,17 +189,21 @@
                 </div>
                 <div class="col-8">
                     <div class="def-opzioni">
-                        <div class="row">
-                            <div class="col">
-
+                        <div class="row mb-4">
+                            <div class="col-12">
+                                <label for="api-key-input" class="form-label" style="font-size: 1.8vw;">Google AI Studio API Key:</label>
+                                <input type="password" class="form-control form-control-lg" id="api-key-input" placeholder="Inserisci la tua API Key...">
+                                <div id="apiKeyHelp" class="form-text" style="color: #cccccc;">La tua API key non verrà memorizzata permanentemente.</div>
                             </div>
-                            <div class="col">
-
-                            </div>
-
                         </div>
                         <div class="row">
-
+                            <div class="col">
+                                <!-- Qui puoi aggiungere altre opzioni -->
+                                <p style="font-size: 1.5vw; color: #888;">Altre opzioni future qui...</p>
+                            </div>
+                            <div class="col">
+                                <!-- Qui puoi aggiungere altre opzioni -->
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -207,9 +212,7 @@
         </div>
     </div>
     <div class="attendi">
-
-    </div>
-
+        <!-- Contenuto della sezione Attendi -->
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
